# voiceclip

./: .env.sample  MAKEFILE  pyproject.toml
benchmarks/: golden_set.json
docs/: planing.md  video_script.md
scripts/: eval.py
src/voiceflip/api/: guardrail_router.py  main.py  schemas.py  state.py
src/voiceflip/domain/: guardrail_engine.py  models.py
src/voiceflip/domain/policies/: base.py  rules.py
src/voiceflip/infra/: embeddings.py
src/voiceflip/matching/: __init__.py  base.py
src/voiceflip/matching/strategies/: __init__.py  hybrid.py  keyword.py  semantic.py
