[project]
name = "voiceflip"
version = "0.1.0"
description = ""
authors = [
    {name = "Guandaline",email = "vhguandaline@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "openai (>=2.31.0,<3.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)"
]

[tool.poetry]
packages = [{include = "voiceflip", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
mkdocs = "^1.6.1"
ruff = "^0.15.9"
mypy = "^1.20.0"
mkdocs-material = "^9.7.6"
pydantic = "^2.12.5"

